# ftenders_backend

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/: app.py  config.py  db.py  di.py  indecies.py
src/core/: company.py
src/core/ai/: client.py  templates.py  test.py  tools.py
src/core/ai/prompts/: TEMPLATE_FILE_GUIDE.md  message.txt  system.txt
src/core/ai/tool_responses/: check_company.txt  fetch_satu_product_details.txt  search_companies.txt  search_satu_products.txt
src/routers/: __init__.py  ai.py  company.py  product.py  tender.py
src/scripts/: distinct_template_files.py  scrape.py
