[project]
name = "ftenders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.2",
    "dishka>=1.7.2",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mammoth>=1.11.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]
